--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<header class="major">
 									<h2><a href="#">INVOPS<br />
 									  </a></h2>
-									  <h3>DevOps and Cloud Technoloigy Implementation for Cloud-Based Software Products</h3> <h4> Graduation Project with Excellent Grade</h4>
+									  <h3>DevOps and Cloud Technology Implementation for Cloud-Based Software Products</h3> <h4> Graduation Project with Excellent Grade</h4>
 									<p>Utilized various devops and cloud tools such as Git, Gitlab, Terraform, Docker, AWS and more to facilitate hosting software products on the cloud.  </br>In coordination with Electronics and Communications Department, Faculty of Engineering, Mansoura University.  </p>
 								</header>
 								<a href="#" class="image main"><img src="images/invops.png" alt="" /></a>
