--- a/index.html
+++ b/index.html
@@ -88,7 +88,21 @@
 										<li><a href="https://github.com/mina14george/TerraformInfrastructure" class="button">View Project</a></li>
 									</ul>
 								</article>
-								
+
+
+
+
+								<article>
+									<header>
+										<h2><a href="https://github.com/mina14george/Dockerized-Jenkins-Mysql-Nginx"> Dockerized <br />
+										</a></h2><h3>Jenkins, MySQL, NGINX and Ansible Integration</h3>
+									</header>
+									<a href="https://github.com/mina14george/Dockerized-Jenkins-Mysql-Nginx" class="image fit"><img src="images/docker+mysql.jpeg" alt="" /></a>
+									<p> The project includes a set of Docker containers that facilitate the setup and integration of Jenkins, Nginx, MySQL, and Ansible. The goal is to automate the process of creating a database and table, feeding it with data, and displaying the data through a simple PHP page hosted by Nginx.  </p>
+									<ul class="actions special">
+										<li><a href="https://github.com/mina14george/Dockerized-Jenkins-Mysql-Nginx" class="button">View Project</a></li>
+									</ul>
+								</article>
 
 								<article>
 									<header>
